[gd_scene load_steps=3 format=3 uid="uid://dqeonhwc2l72c"]

[ext_resource type="Script" path="res://escenas/barraUp/barra_up.gd" id="1_x0lko"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6hud"]

[node name="PanelContainer" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 74.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_q6hud")
script = ExtResource("1_x0lko")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label_Explicacio" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "text amb explicacio de la barra de progres"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label_Title" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Progres A"

[node name="Label_LVL" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "lvl :"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label_Energia_invertida" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="Button_mes" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "+"

[node name="Button_menys" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "-"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button_mes" to="." method="_on_button_mes_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button_menys" to="." method="_on_button_menys_pressed"]
